force-app/main/default/objects/Assessment_Summary_Report__c/Assessment_Summary_Report__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Assessment Summary Report</label>
</CustomObject>