force-app/main/default/objects/Assessment_Summary_Report__c/fields/Conga_View_All_Query_Id__c.field-meta.xml
<CustomField>
    <fullName>Conga_View_All_Query_Id__c</fullName>
    <label>Conga View All Query Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>