force-app/main/default/objects/Assessment_Summary_Report__c/fields/Rhino_Print_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Rhino_Print_Template_Id__c</fullName>
    <label>Rhino Print Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>