force-app/main/default/objects/Assessment_Summary_Report__c/fields/Search_by_Name__c.field-meta.xml
<CustomField>
    <fullName>Search_by_Name__c</fullName>
    <label>Search by Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>